<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable;


    public function histoires() {
        return $this->hasMany(Histoires::class);
    }

    public function avis() {
        return $this->belongsToMany(Histoire::class, "avis", "user_id", "histoire_id")->withPivot("reponse");
    }

    public function terminees() {
        return $this->belongsToMany(Histoire::class, "terminee", "user_id", "histoire_id")->withPivot("nombre");
    }

    public function lectures() {
        return $this->belongsToMany(Histoire::class,'lectures')->using(Lecture::class);
    }


    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
    ];
}
